--- a/canvas.css
+++ b/canvas.css
@@ -1,6 +1,6 @@
 
   canvas {
-    background-image: url("background.jpg");
+    /*background-image: url("background.jpg");*/
     height: 100vh;
     width: 100vw;
   }
